--- a/pom.xml
+++ b/pom.xml
@@ -56,5 +56,10 @@
 			<artifactId>vectorz-clj</artifactId>
 			<version>0.14.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.github.insubstantial</groupId>
+			<artifactId>substance</artifactId>
+			<version>7.2.1</version>
+		</dependency>
 	</dependencies>
 </project>
