--- a/pom.xml
+++ b/pom.xml
@@ -61,5 +61,10 @@
 			<artifactId>substance</artifactId>
 			<version>7.2.1</version>
 		</dependency>
+		<dependency>
+			<groupId>com.miglayout</groupId>
+			<artifactId>miglayout</artifactId>
+			<version>3.7.4</version>
+		</dependency>
 	</dependencies>
 </project>
