--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>vizkit</artifactId>
 	<version>0.0.1</version>
@@ -67,7 +68,12 @@
 		</dependency>
 	</dependencies>
 
-  <scm>
-    <tag>vizkit-0.0.1</tag>
-  </scm>
+	<url>https://github.com/nuroko/${project.artifactId}.git</url>
+
+	<scm>
+		<connection>scm:git:git@github.com:nuroko/${project.artifactId}.git</connection>
+		<url>scm:git:git@github.com:nuroko/${project.artifactId}.git</url>
+		<developerConnection>scm:git:git@github.com:nuroko/${project.artifactId}.git</developerConnection>
+		<tag>HEAD</tag>
+	</scm>
 </project>
