--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,7 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>vizkit</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 
 	<name>Vizkit</name>
 	<description>Data visualisation toolkit for Clojure</description>
@@ -74,6 +73,6 @@
 		<connection>scm:git:git@github.com:nuroko/${project.artifactId}.git</connection>
 		<url>scm:git:git@github.com:nuroko/${project.artifactId}.git</url>
 		<developerConnection>scm:git:git@github.com:nuroko/${project.artifactId}.git</developerConnection>
-		<tag>HEAD</tag>
+		<tag>vizkit-0.0.1</tag>
 	</scm>
 </project>
