--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,11 @@
 			<artifactId>miglayout</artifactId>
 			<version>3.7.4</version>
 		</dependency>
+		<dependency>
+			<groupId>incanter</groupId>
+			<artifactId>jfreechart</artifactId>
+			<version>1.0.13-no-gnujaxp</version>
+		</dependency>
 	</dependencies>
 
 	<url>https://github.com/nuroko/${project.artifactId}.git</url>
